--- a/application/admin/view/goods/goods_edit.html
+++ b/application/admin/view/goods/goods_edit.html
@@ -85,6 +85,19 @@
                 </div>
             </div>
             <div class="layui-form-item">
+                <label class="layui-form-label">上传视频</label>
+                    <button type="button" class="layui-btn cover" id="control_video_button">上传视频</button>
+                    <button type="button" class="layui-btn layui-btn-danger cover" id="control_video_del" onclick="deleteVideo()" {if $goods_info['video'] == ''}style="display: none"{/if}>删除视频</button>
+                    <input type="hidden" id="control_video" value="{$goods_info['video']}" name="video"/>
+            </div>
+            <div class="layui-form-item" id="player" {if $goods_info['video'] == ''}style="display: none;"{/if}>
+                <label class="layui-form-label"></label>
+                <div class="layui-input-block">
+                    <video controls="controls" id="control_video_demo" src="{$goods_info['video']}" style="width: 50%;">
+                    </video>
+                </div>
+            </div>
+            <div class="layui-form-item">
                 <label class="layui-form-label">商品介绍</label>
                 <div class="layui-input-block">
                     <textarea class="layui-textarea" placeholder="请输入商品介绍" id="notice" name="content"
@@ -157,6 +170,37 @@
             }
         });
         /**
+         * 视频上传 
+         */
+         var uploadVideo = upload.render({
+            elem: '#control_video_button', //绑定元素
+            url: "/api/file/upload?type=video",//上传接口
+            accept: 'video',
+            field: 'imgFile',
+            before: function(obj){
+                //预读本地文件示例，不支持ie8
+                obj.preview(function(index, file, result){
+                    //$('#control_video_demo').attr('src', result); //图片链接（base64）
+                    //$('#control_video_demo').css('display','block');
+                    $('#control_video_del').css('display','inline');
+                });
+            },
+            done: function(res){
+                layer.msg(res.msg);
+                if(res.error == 0){
+                    $('#player').show();
+                    $('#control_video_demo').attr('src','http://longjizhai.harus.icu'+res.url).show();
+                    //$('#video_source');
+                    $("#control_video").val(res.url);
+                }else{
+                    return layer.msg('上传失败');
+                }
+            },
+            error: function(res){
+                console.log(res);
+            }
+        });
+        /**
         * 监听分类选择
         */
         form.on('select(cate)',function(data){
@@ -223,6 +267,16 @@
             form.render('select');
         }, 'json');
         }
+    }
+    /**
+     * 删除视频
+     */
+     function deleteVideo(){
+        $('#player').hide();
+        $('#control_video_demo').attr('src','').hide();
+        //$('#video_source');
+        $("#control_video").val('');
+        $('#control_video_del').hide();
     }
 	$(document).ready(function(){ 
 	     var options = {
