--- a/application/admin/view/ornament/index.html
+++ b/application/admin/view/ornament/index.html
@@ -36,11 +36,7 @@
                     , { field: 'uname', title: '用户账号' }
                     , { field: 'name', title: '姓名',width:'8%' }
                     , { field: 'mobile', title: '手机号',width:'10%' }
-                    , { field: 'area', title: '所属地区',width:'8%',
-                        templet: function (d) {
-                            return d.province_name + '-' + d.city_name + '-' + d.country_name;
-                        }
-                    }
+                    , { field: 'area', title: '所属地区',width:'8%'}
                     , { field: 'build_name', title: '小区名称',width:'8%' }
                     , { field: 'build_time', title: '装修日期',width:'8%' }
                     , { field: 'status', title: '状态',width:'8%',
