--- a/application/admin/view/ornament/look.html
+++ b/application/admin/view/ornament/look.html
@@ -16,7 +16,7 @@
                             <td>手机号：{$data.mobile}</td>
                         </tr>
                         <tr>
-                            <td>所属城市：{$data.province_name}-{$data.city_name}-{$data.country_name}</td>
+                            <td>所属城市：{$data.area}</td>
                             <td>小区名称：{$data.build_name}</td>
                         </tr>
                         <tr>
