--- a/application/admin/view/check/index.html
+++ b/application/admin/view/check/index.html
@@ -145,14 +145,18 @@
                 [ //表头
                     { type: 'checkbox', fixed: 'left' }
                     , { field: 'id', title: 'ID', width: '10%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
-                    , { field: 'name', title: '申请人', width: '20%' }
-                    , { field: 'company', title: '公司名称', width: '20%' }
-                    , { field: 'mobile', title: '联系电话', width: '20%' }
-                    , { field: 'create_time', title: '申请时间', width: '20%', }
+                    , { field: 'name', title: '申请人', width: '15%' }
+                    , { field: 'company', title: '公司名称', width: '15%' }
+                    , { field: 'mobile', title: '联系电话', width: '15%' }
+                    , { field: 'area', title: '所在地区', width: '15%' }
+                    , { field: 'create_time', title: '申请时间', width: '15%', }
                     , {
                         field: 'handle', title: '操作',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'审核\',\'/admin/check/edit?id=' + d.id +'&type=4' + '\',400,240);">审核</button>' ;
+                            var handle = '';
+                            if(d.checked == 0){
+                                handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'审核\',\'/admin/check/edit?id=' + d.id +'&type=4' + '\',400,240);">审核</button>' ;
+                            }
                             return handle;
                         }
                     }
