--- a/application/admin/view/point_store/goods_add.html
+++ b/application/admin/view/point_store/goods_add.html
@@ -38,21 +38,13 @@
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">所属分类</label>
-                <div class="layui-input-inline select select1">
-                    <select lay-filter="cate" data-id="1">
-                        <option value="">请选择</option>
-                        {volist name='cate' id='vo'}
-                            <option value="{$vo.id}">{$vo.title}</option>
-                         {/volist}
-                    </select>
-                </div>
-            </div>
-            <div class="layui-form-item">
                 <label class="layui-form-label">所属品牌</label>
                 <div class="layui-input-block">
                     <select lay-filter="brands" name="brand_id" id="brands_id">
                         <option value="">请选择</option>
+                        {foreach $brands as $key=>$vo}
+                        <option value="{$vo['id']}">{$vo['name']}</option>
+                        {/foreach}
                     </select>
                 </div>
             </div>
@@ -72,16 +64,9 @@
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">上传视频</label>
-                    <button type="button" class="layui-btn cover" id="control_video_button">上传视频</button>
-                    <button type="button" class="layui-btn layui-btn-danger cover" id="control_video_del" onclick="deleteVideo()" style="display: none">删除视频</button>
-                    <input type="hidden" id="control_video" value="" name="video"/>
-            </div>
-            <div class="layui-form-item" id="player" style="display: none;">
-                <label class="layui-form-label"></label>
+                <label class="layui-form-label">所需积分</label>
                 <div class="layui-input-block">
-                    <video controls="controls" id="control_video_demo" style="width: 50%;display: none">
-                    </video>
+                    <input autocomplete="off" class="layui-input" lay-verify="required" name="points" placeholder="请输入商品所需积分" type="text" />
                 </div>
             </div>
             <div class="layui-form-item">
@@ -91,8 +76,20 @@
                         style="width: 100%;height: 400px;"></textarea>
                 </div>
             </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">是否上架</label>
+                <div class="layui-input-block">
+                  <input type="checkbox" name="online" lay-skin="switch" lay-text="是|否" value="1" checked>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">推&nbsp;&nbsp;&nbsp;荐</label>
+                <div class="layui-input-block">
+                  <input type="checkbox" name="hot" lay-skin="switch" lay-text="是|否" value="1">
+                </div>
+            </div>
             <input type="hidden" name="thumb" value="" />
-            <input type="hidden" name="cate_id" value="" />
+            <input type="hidden" name="cate" value="8" />
             <div class="layui-form-item">
                 <div class="layui-input-block">
                     <button class="layui-btn"  lay-filter="toSubmit" lay-submit=""  style="margin-left: 33%">
@@ -111,11 +108,11 @@
 <script type="text/javascript" src="__static__/kindeditor/kindeditor-all.js"></script>
 <script type="text/javascript" src="__static__/kindeditor/lang/zh-CN.js"></script>
 <script type="text/javascript">
-    var cate_id = '';
     var form = {};
     KindEditor.ready(function (K) {
         notice = K.create('#notice', {
-            uploadJson: '/api/file/upload?type=article',
+            uploadJson: '/api/file/upload?type=goods',
+            urlType:'domain',
             afterBlur: function(){
                 this.sync();
             }
@@ -149,115 +146,7 @@
                 // 上传失败
             }
         });
-        /**
-         * 视频上传 
-         */
-         var uploadVideo = upload.render({
-            elem: '#control_video_button', //绑定元素
-            url: "/api/file/upload?type=video",//上传接口
-            accept: 'video',
-            field: 'imgFile',
-            before: function(obj){
-                //预读本地文件示例，不支持ie8
-                obj.preview(function(index, file, result){
-                    //$('#control_video_demo').attr('src', result); //图片链接（base64）
-                    //$('#control_video_demo').css('display','block');
-                    $('#control_video_del').css('display','inline');
-                });
-            },
-            done: function(res){
-                layer.msg(res.msg);
-                if(res.error == 0){
-                    $('#player').show();
-                    $('#control_video_demo').attr('src','http://longjizhai.harus.icu'+res.url).show();
-                    //$('#video_source');
-                    $("#control_video").val(res.url);
-                }else{
-                    return layer.msg('上传失败');
-                }
-            },
-            error: function(res){
-                console.log(res);
-            }
-        });
-        /**
-        * 监听分类选择
-        */
-        form.on('select(cate)',function(data){
-            var id = $(data.elem).data('id');
-            if (data.value == 0 || data.value == '') {
-                var select = $('div').find('.select');
-                select.each(function(i,v){
-                    if(i+1 > id){
-                        $(v).remove();
-                    }
-                });
-                return false;
-            }
-            cate_id = data.value;
-            $('input[name="cate_id"]').val(cate_id);
-            getBrands(data.value);
-            $.post('/api/goods_cate/index', {
-                pid: data.value,
-                type: 2,
-            }, function (data) {
-                var res = data.data;
-                if (data.code == 200) {
-                    if (res.length > 0) {
-                        var ids = parseInt(id) + 1;
-                        var html_t = '<div class="layui-input-inline select select'+ids+'">'+
-                                        '<select lay-filter="cate" data-id="'+ids+'">';
-                        var option = '<option value="">请选择</option>';
-                        res.forEach(function (v, i) {
-                            option += '<option value="' + v.id + '">' + v.title + '</option>';
-                        });
-                        var html = html_t + option + '</select></div>';
-                        var select = $('div').find('.select');
-                        select.each(function(i,v){
-                            if(i+1 > id){
-                                $(v).remove();
-                            }
-                        });
-                        $('.select' + id).after(html);
-                        form.render('select');
-                    }
-                }
-            }, 'json');
-        });
-    });  
-    /**
-     * 获取当前分类绑定的品牌数据
-    */
-    function getBrands(cate_id){
-        if(cate_id){
-            $.post('/api/goods_cate/getBrands', {
-            cate_id: cate_id,
-        }, function (data) {
-            var option = '<option value="">请选择</option>';
-            var res = data.data;
-            if (data.code == 200) {
-                if (res.length > 0) {
-                    res.forEach(function (v, i) {
-                        option += '<option value="' + v.id + '">' + v.name + '</option>';
-                    });
-                    
-                }
-            }
-            $('#brands_id').html(option);
-            form.render('select');
-        }, 'json');
-        }
-    }    
-    /**
-     * 删除视频
-     */
-     function deleteVideo(){
-        $('#player').hide();
-        $('#control_video_demo').attr('src','').hide();
-        //$('#video_source');
-        $("#control_video").val('');
-        $('#control_video_del').hide();
-    }
+    });
 	$(document).ready(function(){ 
 	     var options = {
 		      type:'post',           //post提交
